--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" href="./static/css/base.css"> -->
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- <link rel="stylesheet" href="/static/css/base.css">
+  <link rel="stylesheet" href="./static/css/bootstrap.css" type="text/css"> -->
   <title>Document</title>
 </head>
+
 <body>
   <dev id="root">
 
   </dev>
 </body>
+
 </html>
